k8s/ingress-appsrv.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: m-schrutek
spec:
#  entryPoints:
#    - websecure
  routes:
  - kind: Rule
    match: Host(`m-schrutek.cloud.key.fit`)
    services:
    - name: appsrv
      port: 80
#  tls:
#    secretName: default-ingress-cert
---
apiVersion: v1
kind: Service
metadata:
  name: appsvr
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    component: appsrv
